--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,7 +15,7 @@
 -->
 <resources>
 
-    <string name="app_name">Lightstreamer StockListDemo</string>
+    <string name="app_name">Lightstreamer Stock Demo</string>
     <string name="no_data">N/A</string>
     <string name="stop">Pause Lightstreamer Connection</string>
     <string name="start">Restart Lightstreamer Connection</string>
